sock-shop/base/front-end-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    name: front-end
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8079
  selector:
    name: front-end
